feat(server): support pagination in list models (#233)
